      detected.
    + Allow to set LLDP-MED network policy from lldpctl, thanks to a patch from
      Philipp Kempgen.
    + Allow to set LLDP-MED POE-MDI from lldpctl.
    + Add a summary of available options in "lldpd -h" and "lldpctl -h",
      thanks to a patch from Jorge Boncompte.
    + Add a new output (keyvalue) for lldpctl.

  * Fixes:
    + Ignore interface with no queue. It should filter out interfaces
      like "vnet0" that would fail if we try to send something on them.

lldpd (0.5.0)

  * Features:
    + lldpd can now handle several systems on the same port. This
      modification also allows to speak to a switch using CDP and LLDP
      for example.
    + The way that lldpd gathers information for each port has been
      abstracted. This should allow to support more systems (BSD for
      examples) or switch cores in the future. Sending/receive support
      is also abstracted.
    + Add "-k" switch to avoid to emit too much information on running
      kernel.
    + Support of ifAlias with kernel >= 2.6.28
    + Lot of portability stuff. lldpd can now be compiled on RHEL
      2.1. Still Linux-only though.
    + Add an option to specify AgentX socket (-X).
    + Add some unit tests
    + lldpctl has been reworked; it is now able to output data in XML
      format for easier parsing. Patches were provided by Andreas
      Hofmeister.

  * Bug fixes:
    + Fix EDP VLAN handling
    + Silent warnings about bridge stuff.
    + Copy /etc/localtime into chroot before starting lldpd daemon to
      ensure correct timestamps for logs.

lldpd (0.4.1)

  * Fix EDP handling when there is no VLAN
  * Fix CDP version to not always be 1
  * Misc fix:
     + incorrect number of arguments for a LLOG_INFO call
     + fix SNMP last change in case this change occurs before start time

lldpd (0.4)

  * Rewrite of packet builder and parser to be able to cope with
    architecture that cannot do unaligned read. For decoder, we don't