@@ -47,13 +47,15 @@
 /* SONMP: "ether dst 01:00:81:00:01:00" */
 /* EDP: "ether dst 00:e0:2b:00:00:00" */
 #define LLDPD_FILTER_F			\
-	{ 0x28, 0, 0, 0x0000000c },	\
-	{ 0x15, 0, 4, 0x000088cc },	\
 	{ 0x20, 0, 0, 0x00000002 },	\
-	{ 0x15, 0, 2, 0xc200000e },	\
+	{ 0x15, 0, 7, 0xc200000e },	\
 	{ 0x28, 0, 0, 0x00000000 },	\
-	{ 0x15, 11, 12, 0x00000180 },	\
-	{ 0x20, 0, 0, 0x00000002 },	\
+	{ 0x15, 0, 16, 0x00000180 },	\
+	{ 0x28, 0, 0, 0x0000000c },	\
+	{ 0x15, 13, 0, 0x000088cc },	\
+	{ 0x15, 0, 13, 0x00008100 },	\
+	{ 0x28, 0, 0, 0x00000010 },	\
+	{ 0x15, 10, 11, 0x000088cc },	\
 	{ 0x15, 0, 2, 0x2b000000 },	\
 	{ 0x28, 0, 0, 0x00000000 },	\
 	{ 0x15, 7, 8, 0x000000e0 },	\
